2011-06-02  Peter Vrabec  <pvrabec@redhat.com>

	* libmisc/find_new_uid.c, libmisc/find_new_gid.c: Add missing
	memory allocation check.

2011-06-02  Cal Peake  <cp@absolutedigital.net>

	* NEWS, libmisc/addgrps.c: Fix allocator loop. Continue to
	getgroups() when getgroups fails (-1) with errno==EINVAL.

2011-06-01  Simon Brandmair  <sbrandmair@gmx.net>

	* man/newusers.8.xml, man/suauth.5.xml, man/suauth.5.xml,
	  man/logoutd.8.xml, man/chgpasswd.8.xml, man/groups.1.xml,
	  man/faillog.5.xml, man/login.defs.d/MD5_CRYPT_ENAB.xml,
	  man/login.defs.d/DEFAULT_HOME.xml,
	  man/login.defs.d/LOGIN_RETRIES.xml,
	  man/login.defs.d/MD5_CRYPT_ENAB.xml,
	  man/login.defs.d/PORTTIME_CHECKS_ENAB.xml, 
	  man/login.defs.d/SHA_CRYPT_MIN_ROUNDS.xml:
	  Fix typos
	* man/po/de.po: German translation of manpages completed

2011-05-23  Innocent De Marchi  <tangram.peces@gmail.com>

	* po/ca.po: Catalan translation completed

2011-04-22  Miguel Figueiredo  <elmig@debianpt.org>

	* po/pt.po: Portuguese translation completed

2011-04-22  Thomas Blein  <tblein@tblein.eu>

	* po/fr.po: French translation completed

2011-04-16  Holger Wansing  <linux@wansing-online.de>

	* po/de.po: German translation completed

2011-04-15  Fred Maranhão  <fred.maranhao@gmail.com>

	* po/pt_BR.po: Brazilian Portuguese translation completed

2011-04-10  Yuri Kozlov  <yuray@komyakino.ru>

	* po/ru.po: Russian translation completed

2011-04-07  Daniel Nylander  <po@danielnylander.se>

	* po/sv.po: Swedish translation completed

2011-04-07  Joe Dalton  <joedalton2@yahoo.dk>

	* po/da.po: Danish translation completed

2011-04-05  Timur Birsh  <taem@linukz.org>

	* po/kk.po: Kazakh translation completed

2011-04-05  NAKANO Takeo  <nakano@st.seikei.ac.jp>

	* po/ja.po: Japanese translation completed

2011-03-30  YunQiang Su  <wzssyqa@gmail.com>

	* man/po/zh_CN.po: convert Simplified Chinese translation 
	  of manpages to gettext
	* po/zh_CN.po: Simplified Chinese translation completed
